--- a/index.html
+++ b/index.html
@@ -16,14 +16,11 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/romgripper/ROM-Gripper">View on GitHub</a>
-
           <h1 id="project_title">Rom-gripper</h1>
           <h2 id="project_tagline">ROM Gripper官方网站</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/romgripper/ROM-Gripper/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/romgripper/ROM-Gripper/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/romgripper/ROM-Gripper/ROMGripper3.3.apk">下载ROM Gripper</a>
             </section>
         </header>
     </div>
