--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <p>模拟器游戏ROM大合集
 最新版本： 3.3</p>
 
-<p><a href="http://pan.baidu.com/share/link?shareid=567821&amp;uk=722066297">下载安装ROM Gripper</a></p>
+<p><a href="https://github.com/romgripper/ROM-Gripper/ROMGripper3.3.apk">下载安装ROM Gripper</a></p>
       </section>
     </div>
 
