--- a/index.html
+++ b/index.html
@@ -27,15 +27,13 @@
         <p>模拟器游戏ROM大合集
 最新版本： 3.3</p>
 
-<p><a href="https://github.com/romgripper/ROM-Gripper/ROMGripper3.3.apk">下载安装ROM Gripper</a></p>
+<p><a href="https://raw.github.com/romgripper/ROM-Gripper/gh-pages/RomGripper3.3.apk">下载安装ROM Gripper</a></p>
       </section>
     </div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Rom-gripper maintained by <a href="https://github.com/romgripper">romgripper</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
 
