--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <p>模拟器游戏ROM大合集
 最新版本： 3.3</p>
 
-<p><a href="https://raw.github.com/romgripper/ROM-Gripper/gh-pages/RomGripper3.3.apk">下载安装ROM Gripper</a></p>
+<p><a href="RomGripper3.3.apk">下载安装ROM Gripper</a></p>
       </section>
     </div>
 
