--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <h1 id="project_title">ROM Gripper</h1>
+          <h1 id="project_title"><img src="favicon.png" width="48" height="48"/>ROM Gripper</h1>
           <h2 id="project_tagline">ROM Gripper官方网站</h2>
         </header>
     </div>
