Modify home page and add screenshots

--- a/index.html
+++ b/index.html
@@ -16,19 +16,34 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <img src="favicon.png" width="48" height="48"/>
-          <h1 id="project_title">ROM Gripper</h1>
-          <h2 id="project_tagline">ROM Gripper官方网站</h2>
+		  <table style="border:1;">
+			<tr>
+			<td valgin="middle">
+				<img src="favicon.png" width="48" height="48"/>
+			</td>
+			<td valgin="middle">
+				<h1 id="project_title" style="margin-left: 20px">ROM Gripper官方网站</h1>
+			</td>
+		  </table>            
         </header>
     </div>
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p>模拟器游戏ROM大合集
-最新版本： 3.3</p>
+        <h3>模拟器游戏ROM大合集
+最新版本： 3.3</h3>
 
-<p><a href="RomGripper3.3.apk">下载安装ROM Gripper</a></p>
+		<p><a href="RomGripper3.3.apk">下载安装ROM Gripper</a></p>
+		<ul>
+		<li>寻找童年时代游戏</li>
+		<li>提供成千上万ROM免费下载</li>
+		<li>简单实用</li>
+		</ul>
+		<h5>应用截屏</h5>
+		<img src="images/screenshots/emulator_list.jpg" width="138" height="230"/>
+		<img src="images/screenshots/rom_list.jpg" width="138" height="230"/>
+		<img src="images/screenshots/rom_details.jpg" width="138" height="230"/>
       </section>
     </div>
 
