--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>模拟器游戏ROM大合集
-最新版本： 3.3</h3>
+        <h3>模拟器游戏ROM大合集</h3>
+        <h4>最新版本：3.3</h4>
 
 		<p><a href="RomGripper3.3.apk">下载安装ROM Gripper</a></p>
 		<ul>
