--- a/index.html
+++ b/index.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Rom-gripper : ROM Gripper官方网站" />
+<head>
+	<meta charset='utf-8' />
+	<meta http-equiv="X-UA-Compatible" content="chrome=1" />
+	<meta name="description" content="Rom-gripper : ROM Gripper官方网站" />
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+	<link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>ROM Gripper官方网站</title>
-    <script>
-	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	<title>ROM Gripper官方网站</title>
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-	ga('create', 'UA-37513217-2', 'romgripper.github.io');
-	ga('send', 'pageview');
-    </script>
-  </head>
+		ga('create', 'UA-37513217-2', 'romgripper.github.io');
+		ga('send', 'pageview');
+	</script>
+</head>
 
-  <body>
+<body>
 
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
@@ -45,14 +45,19 @@
 
 		<p><a href="RomGripper3.3.apk">下载安装ROM Gripper</a></p>
 		<ul>
-		<li>寻找童年时代游戏</li>
-		<li>提供成千上万ROM免费下载</li>
-		<li>简单实用</li>
+			<li>寻找童年时代游戏</li>
+			<li>提供成千上万ROM免费下载</li>
+			<li>简单实用</li>
 		</ul>
 		<h5>应用截屏</h5>
 		<img src="images/screenshots/emulator_list.jpg" width="138" height="230"/>
 		<img src="images/screenshots/rom_list.jpg" width="138" height="230"/>
-		<img src="images/screenshots/rom_details.jpg" width="138" height="230"/>
+		<img src="images/screenshots/rom_details.jpg" width="138" height="230"/><br/>
+		<h5>使用方法</h5>
+		<ol>
+			<li>使用此APP下载ROM文件</li>
+			<li>使用响应的模拟器APP打开ROM文件玩游戏</li>
+		</ol>
       </section>
     </div>
 
@@ -64,5 +69,5 @@
 
     
 
-  </body>
+</body>
 </html>
