--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		<h5>使用方法</h5>
 		<ol>
 			<li>使用此APP下载ROM文件</li>
-			<li>使用响应的模拟器APP打开ROM文件玩游戏</li>
+			<li>使用相应的模拟器APP打开ROM文件玩游戏</li>
 		</ol>
       </section>
     </div>
