Add detailed instructions

--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
 		<img src="images/screenshots/rom_details.jpg" width="138" height="230"/><br/>
 		<h5>使用方法</h5>
 		<ol>
-			<li>使用此APP下载ROM文件</li>
+			<li>打开此APP</li>
+			<li>选择模拟器类型</li>
+			<li>选择游戏</li>
+			<li>点击Download按钮下载ROM文件</li>
 			<li>使用相应的模拟器APP打开ROM文件玩游戏</li>
 		</ol>
       </section>
@@ -66,8 +69,5 @@
       <footer class="inner">
       </footer>
     </div>
-
-    
-
 </body>
 </html>
