--- a/index.html
+++ b/index.html
@@ -7,17 +7,9 @@
 	<meta name="description" content="Rom-gripper : ROM Gripper官方网站" />
 
 	<link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+	<script language="javascript" src="javascripts/googleAnalytics.js"></script>
 
 	<title>ROM Gripper官方网站</title>
-	<script>
-		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-		ga('create', 'UA-37513217-2', 'romgripper.github.io');
-		ga('send', 'pageview');
-	</script>
 </head>
 
 <body>
