--- a/index.html
+++ b/index.html
@@ -17,42 +17,53 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-		  <table style="border:1;">
-			<tr>
-			<td valgin="middle">
-				<img src="favicon.png" width="48" height="48"/>
-			</td>
-			<td valgin="middle">
-				<h1 id="project_title" style="margin-left: 20px">ROM Gripper官方网站</h1>
-			</td>
-		  </table>            
+	<table style="border:1;">
+	<tr>
+		<td valgin="middle">
+			<img src="favicon.png" width="48" height="48"/>
+		</td>
+		<td valgin="middle">
+			<h1 id="project_title" style="margin-left: 20px">ROM Gripper官方网站</h1>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2" align="right">
+			<a href="mailto:romgripper@gmail.com">联系我们</a>
+		</td>
+	</tr>
+	</table>            
         </header>
     </div>
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>模拟器游戏ROM大合集</h3>
-        <h4>最新版本：3.3</h4>
+	<h3>模拟器游戏ROM大合集</h3>
+	<h4>最新版本：3.3</h4>
 
-		<h4><a href="RomGripper3.3.apk">下载安装ROM Gripper</a></h4>
-		<ul>
-			<li>寻找童年时代游戏</li>
-			<li>提供成千上万ROM免费下载</li>
-			<li>简单实用</li>
-		</ul>
-		<h5>应用截屏</h5>
-		<img src="images/screenshots/emulator_list.jpg" width="138" height="230"/>
-		<img src="images/screenshots/rom_list.jpg" width="138" height="230"/>
-		<img src="images/screenshots/rom_details.jpg" width="138" height="230"/><br/>
-		<h5>使用方法</h5>
-		<ol>
-			<li>打开此APP</li>
-			<li>选择模拟器类型</li>
-			<li>选择游戏</li>
-			<li>点击Download按钮下载ROM文件</li>
-			<li>使用相应的模拟器APP打开ROM文件玩游戏</li>
-		</ol>
+	<h4><a href="RomGripper3.3.apk">下载安装ROM Gripper</a></h4>
+	<ul>
+		<li>寻找童年时代游戏</li>
+		<li>提供成千上万ROM免费下载</li>
+		<li>简单实用</li>
+	</ul>
+	<h5>应用截屏</h5>
+	<img src="images/screenshots/emulator_list.jpg" width="138" height="230"/>
+	<img src="images/screenshots/rom_list.jpg" width="138" height="230"/>
+	<img src="images/screenshots/rom_details.jpg" width="138" height="230"/><br/>
+	<h5>使用方法</h5>
+	<ol>
+		<li>打开此APP</li>
+		<li>选择模拟器类型</li>
+		<li>选择游戏</li>
+		<li>点击Download按钮下载ROM文件</li>
+		<li>使用相应的模拟器APP打开ROM文件玩游戏</li>
+	</ol>
+	<br/>
+	<a href="mailto:romgripper@gmail.com">如有任何问题和建议，请写信给开发者</a>
+	<br/>
+	<br/>
+	<br/>
       </section>
     </div>
 
