--- a/index.html
+++ b/index.html
@@ -42,10 +42,15 @@
 	<h4>最新版本：3.4</h4>
 
 	<h4><a href="RomGripper3.4.apk">下载安装ROM Gripper</a></h4>
+	<h5>软件简介</h5>
 	<ul>
 		<li>寻找童年时代游戏</li>
 		<li>提供成千上万ROM免费下载</li>
 		<li>简单实用</li>
+	</ul>
+	<h5>更新内容</h5>
+	<ul>
+		<li>加入中文支持</li>
 	</ul>
 	<h5>应用截屏</h5>
 	<img src="images/screenshots/emulator_list.jpg" width="138" height="230"/>
