Add page "Emulator Game List" and its resources

--- a/gamelist.html
+++ b/gamelist.html
@@ -32,47 +32,51 @@
 		</td>
 	</tr>
 	</table>            
-	<!--table>
+	<table>
 	<tr>
 		<td valgin="middle">
-			<a href="gamelist.html">Emulator Game List</a>
+			<a href="index.html">ROM Gripper</a>
 		</td>
 		<td valgin="middle">
 			<a href="faq.html" style="margin-left: 20px">常见问题</a>
 		</td>
 	</tr>
-	</table-->            
+	</table>            
         </header>
     </div>
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-	<h3>ROM Gripper(模拟器游戏ROM大合集)</h3>
-	<h4>最新版本：3.4</h4>
+	<h3>Emulator Game List(模拟器ROM搜索助手)</h3>
+	<h4>最新版本：1.2.9</h4>
 
-	<h4><a href="RomGripper3.4.apk">下载安装ROM Gripper</a></h4>
+	<h4><a href="GameList1.2.9.apk">下载安装Emulator Game List</a></h4>
 	<h5>软件简介</h5>
 	<ul>
-		<li>寻找童年时代游戏</li>
-		<li>提供成千上万ROM免费下载</li>
-		<li>简单实用</li>
+		<li>最全的模拟器游戏列表</li>
+		<li>虽无法直接下载游戏，但通过百度搜索引擎搜索游戏，用户自主选择下载</li>
 	</ul>
 	<h5>更新内容</h5>
 	<ul>
 		<li>加入中文支持</li>
+		<li>使用百度搜索游戏</li>
+		<li>应用商店快捷搜索模拟器软件</li>
+		<li>修复一个软件崩溃的问题</li>
 	</ul>
 	<h5>应用截屏</h5>
-	<img src="images/romgripper/screenshots/emulator_list.jpg" width="138" height="230"/>
-	<img src="images/romgripper/screenshots/rom_list.jpg" width="138" height="230"/>
-	<img src="images/romgripper/screenshots/rom_details.jpg" width="138" height="230"/><br/>
+	<img src="images/gamelist/screenshots/screenshot1.png" width="138" height="230"/>
+	<img src="images/gamelist/screenshots/screenshot2.png" width="138" height="230"/>
+	<img src="images/gamelist/screenshots/screenshot3.png" width="138" height="230"/>
+	<img src="images/gamelist/screenshots/screenshot4.png" width="138" height="230"/>
+	<img src="images/gamelist/screenshots/screenshot5.png" width="138" height="230"/>
+	<img src="images/gamelist/screenshots/screenshot6.png" width="138" height="230"/>
+	<img src="images/gamelist/screenshots/screenshot7.png" height="138" width="230"/>
 	<h5>使用方法</h5>
 	<ol>
 		<li>打开此APP</li>
 		<li>选择模拟器类型</li>
 		<li>选择游戏</li>
-		<li>点击Download按钮下载ROM文件</li>
-		<li>使用相应的模拟器APP打开ROM文件玩游戏</li>
 	</ol>
 	<br/>
 	<a href="mailto:romgripper@gmail.com">如有任何问题和建议，请写信给开发者</a>
