Add the omitted files in last commit

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		</td>
 	</tr>
 	</table>            
-	<!--table>
+	<table>
 	<tr>
 		<td valgin="middle">
 			<a href="gamelist.html">Emulator Game List</a>
@@ -41,7 +41,7 @@
 			<a href="faq.html" style="margin-left: 20px">常见问题</a>
 		</td>
 	</tr>
-	</table-->            
+	</table>            
         </header>
     </div>
 
@@ -63,9 +63,9 @@
 		<li>加入中文支持</li>
 	</ul>
 	<h5>应用截屏</h5>
-	<img src="images/romgripper/screenshots/emulator_list.jpg" width="138" height="230"/>
-	<img src="images/romgripper/screenshots/rom_list.jpg" width="138" height="230"/>
-	<img src="images/romgripper/screenshots/rom_details.jpg" width="138" height="230"/><br/>
+	<a href="images/romgripper/screenshots/emulator_list.jpg"><img src="images/romgripper/screenshots/emulator_list.jpg" width="138" height="230"/></a>
+	<a href="images/romgripper/screenshots/rom_list.jpg"><img src="images/romgripper/screenshots/rom_list.jpg" width="138" height="230"/></a>
+	<a href="images/romgripper/screenshots/rom_details.jpg"><img src="images/romgripper/screenshots/rom_details.jpg" width="138" height="230"/></a><br/>
 	<h5>使用方法</h5>
 	<ol>
 		<li>打开此APP</li>
@@ -74,17 +74,13 @@
 		<li>点击Download按钮下载ROM文件</li>
 		<li>使用相应的模拟器APP打开ROM文件玩游戏</li>
 	</ol>
-	<br/>
-	<a href="mailto:romgripper@gmail.com">如有任何问题和建议，请写信给开发者</a>
-	<br/>
-	<br/>
-	<br/>
       </section>
     </div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
+	<a href="mailto:romgripper@gmail.com">如有任何问题和建议，请写信给开发者</a>
       </footer>
     </div>
 </body>
