Add FAQ page Move 联系我们 to footer

--- a/gamelist.html
+++ b/gamelist.html
@@ -26,11 +26,6 @@
 			<h1 id="project_title" style="margin-left: 20px">ROM Gripper官方网站</h1>
 		</td>
 	</tr>
-	<tr>
-		<td colspan="2" align="right">
-			<a href="mailto:romgripper@gmail.com">联系我们</a>
-		</td>
-	</tr>
 	</table>            
 	<table>
 	<tr>
@@ -38,7 +33,7 @@
 			<a href="index.html">ROM Gripper</a>
 		</td>
 		<td valgin="middle">
-			<a href="faq.html" style="margin-left: 20px">常见问题</a>
+			<a href="faq.html" style="margin-left: 20px">疑问解答</a>
 		</td>
 	</tr>
 	</table>            
