Change footer of gamelist.html

--- a/gamelist.html
+++ b/gamelist.html
@@ -143,7 +143,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-	<a href="mailto:romgripper@gmail.com">如有任何问题和建议，请写信给开发者</a>
+	<a href="mailto:romgripper@gmail.com">联系我们</a>
       </footer>
     </div>
 </body>
