--- a/faq.html
+++ b/faq.html
@@ -30,10 +30,10 @@
 	<table>
 	<tr>
 		<td valgin="middle">
-			<a href="index.html">ROM Gripper</a>
+			<h5><a href="index.html">ROM Gripper</a></h5>
 		</td>
 		<td valgin="middle">
-			<a href="gamelist.html" style="margin-left: 20px">Emulator Game List</a>
+			<h5><a href="gamelist.html" style="margin-left: 20px">Emulator Game List</a></h5>
 		</td>
 	</tr>
 	</table>            
