--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 	<table>
 	<tr>
 		<td valgin="middle">
-			<a href="gamelist.html">Emulator Game List</a>
+			<h5><a href="gamelist.html">Emulator Game List</a></h5>
 		</td>
 		<td valgin="middle">
-			<a href="faq.html" style="margin-left: 20px">疑问解答</a>
+			<h5><a href="faq.html" style="margin-left: 20px">疑问解答</a></h5>
 		</td>
 	</tr>
 	</table>            
