Change page layout Add GameList1.3.apk

--- a/faq.html
+++ b/faq.html
@@ -37,13 +37,13 @@
 		</td>
 	</tr>
 	</table>            
+	<h3 id="project_tagline">疑问解答</h3>
         </header>
     </div>
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-	<h3>疑问解答</h3>
 	<h5>什么是模拟器？</h5>
 	<p>是指主要透过软件模拟硬件处理器的功能和指令系统的程序使计算机或者其他多媒体平台（掌上电脑，手机）能够运行其他平台上的软件。</p>
 	<h5>什么是游戏模拟器？</h6>
