--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
 		</td>
 	</tr>
 	</table>            
+	<h3 id="project_tagline">ROM Gripper(模拟器游戏ROM大合集)</h3>
         </header>
     </div>
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-	<h3>ROM Gripper(模拟器游戏ROM大合集)</h3>
 	<h4>最新版本：3.4</h4>
 
 	<h4><a href="RomGripper3.4.apk">下载安装ROM Gripper</a></h4>
