--- a/gamelist.html
+++ b/gamelist.html
@@ -37,16 +37,16 @@
 		</td>
 	</tr>
 	</table>            
+	<h3 id="project_tagline">Emulator Game List(模拟器ROM搜索助手)</h3>
         </header>
     </div>
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-	<h3>Emulator Game List(模拟器ROM搜索助手)</h3>
-	<h4>最新版本：1.2.9</h4>
+	<h4>最新版本：1.3</h4>
 
-	<h4><a href="GameList1.2.9.apk">下载安装Emulator Game List</a></h4>
+	<h4><a href="GameList1.3.apk">下载安装Emulator Game List</a></h4>
 	<h5>软件简介</h5>
 	<ul>
 		<li>最全的模拟器游戏列表</li>
