Should all page links at the header of every page

--- a/gamelist.html
+++ b/gamelist.html
@@ -33,6 +33,9 @@
 			<h5><a href="index.html">ROM Gripper</a></h5>
 		</td>
 		<td valgin="middle">
+			<h5><a href="gamelist.html" style="margin-left: 20px">Emulator Game List</a></h5>
+		</td>
+		<td valgin="middle">
 			<h5><a href="faq.html" style="margin-left: 20px">疑问解答</a></h5>
 		</td>
 	</tr>
