--- a/faq.html
+++ b/faq.html
@@ -35,6 +35,9 @@
 		<td valgin="middle">
 			<h5><a href="gamelist.html" style="margin-left: 20px">Emulator Game List</a></h5>
 		</td>
+		<td valgin="middle">
+			<h5><a href="faq.html" style="margin-left: 20px">疑问解答</a></h5>
+		</td>
 	</tr>
 	</table>            
 	<h3 id="project_tagline">疑问解答</h3>
