--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
 	<table>
 	<tr>
 		<td valgin="middle">
-			<h5><a href="gamelist.html">Emulator Game List</a></h5>
+			<h5><a href="index.html">ROM Gripper</a></h5>
+		</td>
+		<td valgin="middle">
+			<h5><a href="gamelist.html" style="margin-left: 20px">Emulator Game List</a></h5>
 		</td>
 		<td valgin="middle">
 			<h5><a href="faq.html" style="margin-left: 20px">疑问解答</a></h5>
