change dir layout

--- a/index.html
+++ b/index.html
@@ -1,85 +1,6 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-	<meta charset='utf-8' />
-	<meta http-equiv="X-UA-Compatible" content="chrome=1" />
-	<meta name="description" content="Rom-gripper : ROM Gripper官方网站" />
-
-	<link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-	<script language="javascript" src="javascripts/googleAnalytics.js"></script>
-
-	<title>ROM Gripper官方网站</title>
+<meta HTTP-EQUIV="REFRESH" content="0; url=zh/index.html">
 </head>
-
-<body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-	<table>
-	<tr>
-		<td valgin="middle">
-			<img src="favicon.png" width="48" height="48"/>
-		</td>
-		<td valgin="middle">
-			<h1 id="project_title" style="margin-left: 20px">ROM Gripper官方网站</h1>
-		</td>
-	</tr>
-	</table>            
-	<table>
-	<tr>
-		<td valgin="middle">
-			<h5><a href="index.html">ROM Gripper</a></h5>
-		</td>
-		<td valgin="middle">
-			<h5><a href="gamelist.html" style="margin-left: 20px">Emulator Game List</a></h5>
-		</td>
-		<td valgin="middle">
-			<h5><a href="faq.html" style="margin-left: 20px">疑问解答</a></h5>
-		</td>
-	</tr>
-	</table>            
-	<h3 id="project_tagline">ROM Gripper(模拟器游戏ROM大合集)</h3>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-	<h4>最新版本：3.4</h4>
-
-	<h4><a href="RomGripper3.4.apk">下载安装ROM Gripper</a></h4>
-	<h5>软件简介</h5>
-	<ul>
-		<li>寻找童年时代游戏</li>
-		<li>提供成千上万ROM免费下载</li>
-		<li>简单实用</li>
-	</ul>
-	<h5>更新内容</h5>
-	<ul>
-		<li>加入中文支持</li>
-	</ul>
-	<h5>应用截屏</h5>
-	<a href="images/romgripper/screenshots/emulator_list.jpg"><img src="images/romgripper/screenshots/emulator_list.jpg" width="138" height="230"/></a>
-	<a href="images/romgripper/screenshots/rom_list.jpg"><img src="images/romgripper/screenshots/rom_list.jpg" width="138" height="230"/></a>
-	<a href="images/romgripper/screenshots/rom_details.jpg"><img src="images/romgripper/screenshots/rom_details.jpg" width="138" height="230"/></a><br/>
-	<h5>使用方法</h5>
-	<ol>
-		<li>打开此APP</li>
-		<li>选择模拟器类型</li>
-		<li>选择游戏</li>
-		<li>点击Download按钮下载ROM文件</li>
-		<li>使用相应的模拟器APP打开ROM文件玩游戏</li>
-	</ol>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-	<a href="mailto:romgripper@gmail.com">联系我们</a>
-      </footer>
-    </div>
-</body>
 </html>
