Make zh/*.html work

--- a/zh/faq.html
+++ b/zh/faq.html
@@ -6,8 +6,8 @@
 	<meta http-equiv="X-UA-Compatible" content="chrome=1" />
 	<meta name="description" content="Rom-gripper : ROM Gripper官方网站" />
 
-	<link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-	<script language="javascript" src="javascripts/googleAnalytics.js"></script>
+	<link rel="stylesheet" type="text/css" media="screen" href="../stylesheets/stylesheet.css">
+	<script language="javascript" src="../javascripts/googleAnalytics.js"></script>
 
 	<title>ROM Gripper官方网站</title>
 </head>
