--- a/zh/index.html
+++ b/zh/index.html
@@ -6,8 +6,8 @@
 	<meta http-equiv="X-UA-Compatible" content="chrome=1" />
 	<meta name="description" content="Rom-gripper : ROM Gripper官方网站" />
 
-	<link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-	<script language="javascript" src="javascripts/googleAnalytics.js"></script>
+	<link rel="stylesheet" type="text/css" media="screen" href="../stylesheets/stylesheet.css">
+	<script language="javascript" src="../javascripts/googleAnalytics.js"></script>
 
 	<title>ROM Gripper官方网站</title>
 </head>
@@ -49,7 +49,7 @@
       <section id="main_content" class="inner">
 	<h4>最新版本：3.4</h4>
 
-	<h4><a href="RomGripper3.4.apk">下载安装ROM Gripper</a></h4>
+	<h4><a href="../RomGripper3.4.apk">下载安装ROM Gripper</a></h4>
 	<h5>软件简介</h5>
 	<ul>
 		<li>寻找童年时代游戏</li>
@@ -61,9 +61,9 @@
 		<li>加入中文支持</li>
 	</ul>
 	<h5>应用截屏</h5>
-	<a href="images/romgripper/screenshots/emulator_list.jpg"><img src="images/romgripper/screenshots/emulator_list.jpg" width="138" height="230"/></a>
-	<a href="images/romgripper/screenshots/rom_list.jpg"><img src="images/romgripper/screenshots/rom_list.jpg" width="138" height="230"/></a>
-	<a href="images/romgripper/screenshots/rom_details.jpg"><img src="images/romgripper/screenshots/rom_details.jpg" width="138" height="230"/></a><br/>
+	<a href="../images/romgripper/screenshots/emulator_list.jpg"><img src="../images/romgripper/screenshots/emulator_list.jpg" width="138" height="230"/></a>
+	<a href="../images/romgripper/screenshots/rom_list.jpg"><img src="../images/romgripper/screenshots/rom_list.jpg" width="138" height="230"/></a>
+	<a href="../images/romgripper/screenshots/rom_details.jpg"><img src="../images/romgripper/screenshots/rom_details.jpg" width="138" height="230"/></a><br/>
 	<h5>使用方法</h5>
 	<ol>
 		<li>打开此APP</li>
