--- a/zh/gamelist.html
+++ b/zh/gamelist.html
@@ -6,8 +6,8 @@
 	<meta http-equiv="X-UA-Compatible" content="chrome=1" />
 	<meta name="description" content="Rom-gripper : ROM Gripper官方网站" />
 
-	<link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-	<script language="javascript" src="javascripts/googleAnalytics.js"></script>
+	<link rel="stylesheet" type="text/css" media="screen" href="../stylesheets/stylesheet.css">
+	<script language="javascript" src="../javascripts/googleAnalytics.js"></script>
 
 	<title>ROM Gripper官方网站</title>
 </head>
@@ -49,7 +49,7 @@
       <section id="main_content" class="inner">
 	<h4>最新版本：1.3</h4>
 
-	<h4><a href="GameList1.3.apk">下载安装Emulator Game List</a></h4>
+	<h4><a href="../GameList1.3.apk">下载安装Emulator Game List</a></h4>
 	<h5>软件简介</h5>
 	<ul>
 		<li>最全的模拟器游戏列表</li>
@@ -63,80 +63,80 @@
 		<li>修复一个软件崩溃的问题</li>
 	</ul>
 	<h5>应用截屏</h5>
-	<a href="images/gamelist/screenshots/screenshot1.png"><img src="images/gamelist/screenshots/screenshot1.png" width="138" height="230"/></a>
-	<a href="images/gamelist/screenshots/screenshot2.png"><img src="images/gamelist/screenshots/screenshot2.png" width="138" height="230"/></a>
-	<a href="images/gamelist/screenshots/screenshot3.png"><img src="images/gamelist/screenshots/screenshot3.png" width="138" height="230"/></a>
-	<a href="images/gamelist/screenshots/screenshot4.png"><img src="images/gamelist/screenshots/screenshot4.png" width="138" height="230"/></a>
-	<a href="images/gamelist/screenshots/screenshot5.png"><img src="images/gamelist/screenshots/screenshot5.png" width="138" height="230"/></a>
-	<a href="images/gamelist/screenshots/screenshot6.png"><img src="images/gamelist/screenshots/screenshot6.png" width="138" height="230"/></a>
-	<a href="images/gamelist/screenshots/screenshot7.png"><img src="images/gamelist/screenshots/screenshot7.png" width="230" height="138"/></a>
+	<a href="../images/gamelist/screenshots/screenshot1.png"><img src="../images/gamelist/screenshots/screenshot1.png" width="138" height="230"/></a>
+	<a href="../images/gamelist/screenshots/screenshot2.png"><img src="../images/gamelist/screenshots/screenshot2.png" width="138" height="230"/></a>
+	<a href="../images/gamelist/screenshots/screenshot3.png"><img src="../images/gamelist/screenshots/screenshot3.png" width="138" height="230"/></a>
+	<a href="../images/gamelist/screenshots/screenshot4.png"><img src="../images/gamelist/screenshots/screenshot4.png" width="138" height="230"/></a>
+	<a href="../images/gamelist/screenshots/screenshot5.png"><img src="../images/gamelist/screenshots/screenshot5.png" width="138" height="230"/></a>
+	<a href="../images/gamelist/screenshots/screenshot6.png"><img src="../images/gamelist/screenshots/screenshot6.png" width="138" height="230"/></a>
+	<a href="../images/gamelist/screenshots/screenshot7.png"><img src="../images/gamelist/screenshots/screenshot7.png" width="230" height="138"/></a>
 	<h5>使用方法</h5>
 	<ol>
 		<li>打开此APP</li>
 		<li>
 			选择模拟器类型
 			<div style="display:block;text-align:left;margin-left:15px">
-				<a href="images/gamelist/guide/select-emulator.png"><img src="images/gamelist/guide/select-emulator.png" width="207" height="345"/></a>
+				<a href="../images/gamelist/guide/select-emulator.png"><img src="../images/gamelist/guide/select-emulator.png" width="207" height="345"/></a>
 				<br/>所选模拟器的游戏列表会显示出来
 			</div>
 		</li>
 		<li>
 			选择游戏
 			<div style="display:block;text-align:left;margin-left:15px">
-				<a href="images/gamelist/guide/select-rom.png"><img src="images/gamelist/guide/select-rom.png" width="207" height="345"/></a>
+				<a href="../images/gamelist/guide/select-rom.png"><img src="../images/gamelist/guide/select-rom.png" width="207" height="345"/></a>
 				<br/>所选游戏的详细信息页面会显示出来，如果能搜索到，游戏截屏也会显示出来<br/>
-				<a href="images/gamelist/guide/rom-details.png"><img src="images/gamelist/guide/rom-details.png" width="207" height="345"/></a>
+				<a href="../images/gamelist/guide/rom-details.png"><img src="../images/gamelist/guide/rom-details.png" width="207" height="345"/></a>
 			</div>
 		</li>
 		<li>
 			复制ROM文件名
 			<div style="display:block;text-align:left;margin-left:15px">
-				<a href="images/gamelist/guide/copy-filename.png"><img src="images/gamelist/guide/copy-filename.png" width="207" height="345"/></a>
+				<a href="../images/gamelist/guide/copy-filename.png"><img src="../images/gamelist/guide/copy-filename.png" width="207" height="345"/></a>
 				<br/>默认ROM文件名将被复制到系统剪切板，推荐使用默认ROM文件名保存ROM文件
 			</div>
 		</li>
 		<li>
 			搜索ROM文件
 			<div style="display:block;text-align:left;margin-left:15px">
-				<a href="images/gamelist/guide/search.png"><img src="images/gamelist/guide/search.png" width="207" height="345"/></a>
+				<a href="../images/gamelist/guide/search.png"><img src="../images/gamelist/guide/search.png" width="207" height="345"/></a>
 				<br/>推荐使用海豚浏览器打开<br/>
-				<a href="images/gamelist/guide/select-dolphin.png"><img src="images/gamelist/guide/select-dolphin.png" width="207" height="345"/></a>
+				<a href="../images/gamelist/guide/select-dolphin.png"><img src="../images/gamelist/guide/select-dolphin.png" width="207" height="345"/></a>
 			</div>
 		</li>
 		<li>
 			选择一个链接
 			<div style="display:block;text-align:left;margin-left:15px">
 				大多数情况，都可以从coolrom.com下载，所以点击来自coolrom.com的链接<br/>
-				<a href="images/gamelist/guide/select-coolrom.png"><img src="images/gamelist/guide/select-coolrom.png" width="207" height="345"/></a>
+				<a href="../images/gamelist/guide/select-coolrom.png"><img src="../images/gamelist/guide/select-coolrom.png" width="207" height="345"/></a>
 			</div>
 		</li>
 		<li>
 			下载
 			<div style="display:block;text-align:left;margin-left:15px">
 				点击<b>Download Now</b>下载<br/>
-				<a href="images/gamelist/guide/click-download.png"><img src="images/gamelist/guide/click-download.png" width="207" height="345"/></a>
+				<a href="../images/gamelist/guide/click-download.png"><img src="../images/gamelist/guide/click-download.png" width="207" height="345"/></a>
 				<br/>粘贴ROM文件名<br/>
-				<a href="images/gamelist/guide/paste.png"><img src="images/gamelist/guide/paste.png" width="207" height="345"/></a>
+				<a href="../images/gamelist/guide/paste.png"><img src="../images/gamelist/guide/paste.png" width="207" height="345"/></a>
 				<br/>把保存路径改成第三步中的文件夹，如果该文件夹不存在，创建它<br/>
-				<a href="images/gamelist/guide/save-path.png"><img src="images/gamelist/guide/save-path.png" width="207" height="345"/></a>
+				<a href="../images/gamelist/guide/save-path.png"><img src="../images/gamelist/guide/save-path.png" width="207" height="345"/></a>
 			</div>
 		</li>
 		<li>
 			下载该ROM类型的模拟器
 			<div style="display:block;text-align:left;margin-left:15px">
 				在游戏列表界面，点击最上面的菜单到应用市场找模拟器软件<br/>
-				<a href="images/gamelist/guide/search-emulator.png"><img src="images/gamelist/guide/search-emulator.png" width="207" height="345"/></a>
+				<a href="../images/gamelist/guide/search-emulator.png"><img src="../images/gamelist/guide/search-emulator.png" width="207" height="345"/></a>
 				<br/>选择谷歌的Play Store<br/>
-				<a href="images/gamelist/guide/select-play-store.png"><img src="images/gamelist/guide/select-play-store.png" width="207" height="345"/></a>
+				<a href="../images/gamelist/guide/select-play-store.png"><img src="../images/gamelist/guide/select-play-store.png" width="207" height="345"/></a>
 				<br/>在市场中挑选合适的模拟器软件安装。例如，如果要玩NES游戏，可以选择John NES Lite (NES Emulator)<br/>
-				<a href="images/gamelist/guide/install-emulator.png"><img src="images/gamelist/guide/install-emulator.png" width="207" height="345"/></a>
+				<a href="../images/gamelist/guide/install-emulator.png"><img src="../images/gamelist/guide/install-emulator.png" width="207" height="345"/></a>
 			</div>
 		</li>
 		<li>
 			尽情享受儿时的游戏吧
 			<div style="display:block;text-align:left;margin-left:15px">
 				从模拟器软件中打开刚才下载的ROM文件就能玩这个游戏了<br/>
-				<a href="images/gamelist/guide/play-in-emulator.png"><img src="images/gamelist/guide/play-in-emulator.png" width="207" height="345"/></a>
+				<a href="../images/gamelist/guide/play-in-emulator.png"><img src="../images/gamelist/guide/play-in-emulator.png" width="207" height="345"/></a>
 			</div>
 		</li>
 	</ol>
