Change the web site header

--- a/en/faq.html
+++ b/en/faq.html
@@ -6,10 +6,10 @@
 	<meta http-equiv="X-UA-Compatible" content="chrome=1" />
 	<meta name="description" content="Rom-gripper : ROM Gripper官方网站" />
 
-	<link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-	<script language="javascript" src="javascripts/googleAnalytics.js"></script>
+	<link rel="stylesheet" type="text/css" media="screen" href="../stylesheets/stylesheet.css">
+	<script language="javascript" src="../javascripts/googleAnalytics.js"></script>
 
-	<title>ROM Gripper官方网站</title>
+	<title>ROM Gripper Offcial Website</title>
 </head>
 
 <body>
@@ -17,16 +17,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-	<table>
-	<tr>
-		<td valgin="middle">
-			<img src="favicon.png" width="48" height="48"/>
-		</td>
-		<td valgin="middle">
-			<h1 id="project_title" style="margin-left: 20px">ROM Gripper官方网站</h1>
-		</td>
-	</tr>
-	</table>            
+	<h1 id="project_title"><img src="../favicon.png" width="64" height="64" style="margin-right: 20px"/>ROM Gripper's Home</h1>
 	<table>
 	<tr>
 		<td valgin="middle">
@@ -36,33 +27,34 @@
 			<h5><a href="gamelist.html" style="margin-left: 20px">Emulator Game List</a></h5>
 		</td>
 		<td valgin="middle">
-			<h5><a href="faq.html" style="margin-left: 20px">疑问解答</a></h5>
+			<h5><a href="faq.html" style="margin-left: 20px">FAQ</a></h5>
 		</td>
 	</tr>
 	</table>            
-	<h3 id="project_tagline">疑问解答</h3>
+	<h3 id="project_tagline">FAQ</h3>
         </header>
     </div>
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-	<h5>什么是模拟器？</h5>
-	<p>是指主要透过软件模拟硬件处理器的功能和指令系统的程序使计算机或者其他多媒体平台（掌上电脑，手机）能够运行其他平台上的软件。</p>
-	<h5>什么是游戏模拟器？</h6>
-	<p>可以使电脑或者其他多媒体平台（掌上电脑，手机）模拟成游戏机程序，能够运行游戏机上的游戏，多为电视游戏和街机模拟器，也有一些掌上电脑的模拟器。</p>
-	<h5>什么是模拟器ROM？</h5>
-	<p>模拟器一般需要rom才能执行，rom的最初来源是一些原平台的rom芯片，通过一些手段将原程序拷贝下来，这个过程一般称之为“dump”，然后利用模拟器加载这些rom来实现模拟过程。</p>
-	<h5>玩模拟器游戏都需要什么？</h5>
-	<p>模拟器ROM和相应的模拟器软件，缺一不可。</p>
-
+	<h5>What is emulation?</h5>
+	<p>Emulation is the process of simulating hardware of one machine on another, so in our case, playing SNES, Genesis, N64, etc. games on your PC or Mac. </p>
+	<h5>What is an emulator?</h5>
+	<p>An emulator is the program that simulates the machine you wish to run, so in our case, an emulator allows you to run SNES, Genesis, N64, etc. game images on your PC, Mac or mobile devices.</p>
+	<h5>What is a ROM file?</h5>
+	<p>ROM stands for Read Only Memory. It is the image of the actual game; for example: Super Smash Bros. This is basically a file that has been converted from a game cartridge or CD so that you can run it on your computer.</p>
+	<h5>Why doesn't this ROM work with this emulator?</h5>
+	<p>Certain emulators run certain ROMs better, depending on their compatibility, so try running the ROM with different emulators. If the ROM still doesn't work, it's most likely that it's corrupt (not playable).</p>
+	<h5>What do I need to play these games?</h5>
+	<p>ROM files(always in the format of *.zip or *.iso) and an emulator application that can run that type of ROM.</p>
       </section>
     </div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-	<a href="mailto:romgripper@gmail.com">联系我们</a>
+	<a href="mailto:romgripper@gmail.com">Contact us</a>
       </footer>
     </div>
 </body>
