--- a/en/gamelist.html
+++ b/en/gamelist.html
@@ -6,8 +6,8 @@
 	<meta http-equiv="X-UA-Compatible" content="chrome=1" />
 	<meta name="description" content="Rom-gripper : ROM Gripper官方网站" />
 
-	<link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-	<script language="javascript" src="javascripts/googleAnalytics.js"></script>
+	<link rel="stylesheet" type="text/css" media="screen" href="../stylesheets/stylesheet.css">
+	<script language="javascript" src="../javascripts/googleAnalytics.js"></script>
 
 	<title>ROM Gripper Offcial Website</title>
 </head>
@@ -17,16 +17,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-	<table>
-	<tr>
-		<td valgin="middle">
-			<img src="favicon.png" width="48" height="48"/>
-		</td>
-		<td valgin="middle">
-			<h1 id="project_title" style="margin-left: 20px">ROM Gripper's Home</h1>
-		</td>
-	</tr>
-	</table>            
+	<h1 id="project_title"><img src="../favicon.png" width="64" height="64" style="margin-right: 20px"/>ROM Gripper's Home</h1>
 	<table>
 	<tr>
 		<td valgin="middle">
@@ -49,7 +40,7 @@
       <section id="main_content" class="inner">
 	<h4>Latest version: 1.3</h4>
 
-	<h4><a href="GameList1.3.apk">Download and install Emulator Game List</a></h4>
+	<h4><a href="../GameList1.3.apk">Download and install Emulator Game List</a></h4>
 	<h5>Recent changes</h5>
 	<ul>
 		<li>Fix crashing when search ROM file</li>
@@ -67,15 +58,82 @@
 		<li>Resume broken download</li>
 	</ul>
 	<h5>Screenshots</h5>
-	<a href="images/romgripper/screenshots/emulator_list.jpg"><img src="images/romgripper/screenshots/emulator_list.jpg" width="138" height="230"/></a>
-	<a href="images/romgripper/screenshots/rom_list.jpg"><img src="images/romgripper/screenshots/rom_list.jpg" width="138" height="230"/></a>
-	<a href="images/romgripper/screenshots/rom_details.jpg"><img src="images/romgripper/screenshots/rom_details.jpg" width="138" height="230"/></a><br/>
+	<a href="../images/gamelist/screenshots/screenshot1.png"><img src="../images/gamelist/screenshots/screenshot1.png" width="138" height="230"/></a>
+	<a href="../images/gamelist/screenshots/screenshot2.png"><img src="../images/gamelist/screenshots/screenshot2.png" width="138" height="230"/></a>
+	<a href="../images/gamelist/screenshots/screenshot3.png"><img src="../images/gamelist/screenshots/screenshot3.png" width="138" height="230"/></a>
+	<a href="../images/gamelist/screenshots/screenshot4.png"><img src="../images/gamelist/screenshots/screenshot4.png" width="138" height="230"/></a>
+	<a href="../images/gamelist/screenshots/screenshot5.png"><img src="../images/gamelist/screenshots/screenshot5.png" width="138" height="230"/></a>
+	<a href="../images/gamelist/screenshots/screenshot6.png"><img src="../images/gamelist/screenshots/screenshot6.png" width="138" height="230"/></a>
+	<a href="../images/gamelist/screenshots/screenshot7.png"><img src="../images/gamelist/screenshots/screenshot7.png" width="230" height="138"/></a>
 	<h5>Steps</h5>
 	<ol>
-		<li>Select a game type</li>
-		<li>Select a game</li>
-		<li>Click <b>Download</b> button</li>
-		<li>Open the downloaded ROM from an emulator app</li>
+		<li>
+			Select a game type
+			<div style="display:block;text-align:left;margin-left:15px">
+				<a href="../images/gamelist/guide/select-emulator.png"><img src="../images/gamelist/guide/select-emulator.png" width="207" height="345"/></a>
+				<br/>The game list of this game type will shown.
+			</div>
+		</li>
+		<li>
+			Select a game
+			<div style="display:block;text-align:left;margin-left:15px">
+				<a href="../images/gamelist/guide/select-rom.png"><img src="../images/gamelist/guide/select-rom.png" width="207" height="345"/></a>
+				<br/>The game details page will show. The screenshots will be shown if available.<br/>
+				<a href="../images/gamelist/guide/rom-details.png"><img src="../images/gamelist/guide/rom-details.png" width="207" height="345"/></a>
+			</div>
+		</li>
+		<li>
+			Copy ROM file name
+			<div style="display:block;text-align:left;margin-left:15px">
+				<a href="../images/gamelist/guide/copy-filename.png"><img src="../images/gamelist/guide/copy-filename.png" width="207" height="345"/></a>
+				<br/>The standard ROM file name is copied to the system clipboard. If you don't use this name when you download, the Play button above will not be enabled.
+			</div>
+		</li>
+		<li>
+			Search on Internet
+			<div style="display:block;text-align:left;margin-left:15px">
+				<a href="../images/gamelist/guide/search.png"><img src="../images/gamelist/guide/search.png" width="207" height="345"/></a>
+				<br/>It is recommended to use Dolphin Browser.<br/>
+				<a href="../images/gamelist/guide/select-dolphin.png"><img src="../images/gamelist/guide/select-dolphin.png" width="207" height="345"/></a>
+			</div>
+		</li>
+		<li>
+			Choose one link
+			<div style="display:block;text-align:left;margin-left:15px">
+				Most of the time, you can download with www.coolrom.com. So click the link from coolrom.com<br/>
+				<a href="../images/gamelist/guide/select-coolrom.png"><img src="../images/gamelist/guide/select-coolrom.png" width="207" height="345"/></a>
+			</div>
+		</li>
+		<li>
+			Download
+			<div style="display:block;text-align:left;margin-left:15px">
+				Click the <b>"Download Now"</b> button to download<br/>
+				<a href="../images/gamelist/guide/click-download.png"><img src="../images/gamelist/guide/click-download.png" width="207" height="345"/></a>
+				<br/>Paste the ROM file name.<br/>
+				<a href="../images/gamelist/guide/paste.png"><img src="../images/gamelist/guide/paste.png" width="207" height="345"/></a>
+				<br/>Change the save path to the one shown in Step 3 on details page. If it doesn't exist, create it.<br/>
+				<a href="../images/gamelist/guide/save-path.png"><img src="../images/gamelist/guide/save-path.png" width="207" height="345"/></a>
+				<br/>Click the "Save" button to download the ROM.<br/>
+			</div>
+		</li>
+		<li>
+			Download an emulator app of the game type
+			<div style="display:block;text-align:left;margin-left:15px">
+				On game list page, click <b>"Look for an emulator app"</b><br/>
+				<a href="../images/gamelist/guide/search-emulator.png"><img src="../images/gamelist/guide/search-emulator.png" width="207" height="345"/></a>
+				<br/>Select a store you like<br/>
+				<a href="../images/gamelist/guide/select-play-store.png"><img src="../images/gamelist/guide/select-play-store.png" width="207" height="345"/></a>
+				<br/>Choose a proper emulator app to install. For example, you can install John NES Lite (NES Emulator) if you want to play an NES game.<br/>
+				<a href="../images/gamelist/guide/install-emulator.png"><img src="../images/gamelist/guide/install-emulator.png" width="207" height="345"/></a>
+			</div>
+		</li>
+		<li>
+			Enjoy it and bring back your childhood
+			<div style="display:block;text-align:left;margin-left:15px">
+				Open the ROM file downloaded to play the game<br/>
+				<a href="../images/gamelist/guide/play-in-emulator.png"><img src="../images/gamelist/guide/play-in-emulator.png" width="207" height="345"/></a>
+			</div>
+		</li>
 	</ol>
       </section>
     </div>
