--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta HTTP-EQUIV="REFRESH" content="0; url=zh/index.html">
+<meta HTTP-EQUIV="REFRESH" content="0; url=en/index.html">
 </head>
 </html>
