--- a/en/index.html
+++ b/en/index.html
@@ -6,8 +6,8 @@
 	<meta http-equiv="X-UA-Compatible" content="chrome=1" />
 	<meta name="description" content="Rom-gripper : ROM Gripper官方网站" />
 
-	<link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-	<script language="javascript" src="javascripts/googleAnalytics.js"></script>
+	<link rel="stylesheet" type="text/css" media="screen" href="../stylesheets/stylesheet.css">
+	<script language="javascript" src="../javascripts/googleAnalytics.js"></script>
 
 	<title>ROM Gripper Offcial Website</title>
 </head>
@@ -17,16 +17,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-	<table>
-	<tr>
-		<td valgin="middle">
-			<img src="favicon.png" width="48" height="48"/>
-		</td>
-		<td valgin="middle">
-			<h1 id="project_title" style="margin-left: 20px">ROM Gripper's Home</h1>
-		</td>
-	</tr>
-	</table>            
+	<h1 id="project_title"><img src="../favicon.png" width="64" height="64" style="margin-right: 20px"/>ROM Gripper's Home</h1>
 	<table>
 	<tr>
 		<td valgin="middle">
@@ -49,7 +40,7 @@
       <section id="main_content" class="inner">
 	<h4>Latest version: 3.4</h4>
 
-	<h4><a href="RomGripper3.4.apk">Download and install ROM Gripper</a></h4>
+	<h4><a href="../RomGripper3.4.apk">Download and install ROM Gripper</a></h4>
 	<h5>Recent changes</h5>
 	<ul>
 		<li>Add Chinese support</li>
@@ -69,9 +60,9 @@
 	<p>ROMs are initially organized by gaming system and are further assembled in alphabetical order. You can filter results and search for a specific title, e.g. Super Mario Bros. You can also access a list of the ROMs you've downloaded from the menu.</p>
 	<p>Conveniently, the ROM pages offer screenshots so you can quickly see whether you've found what you were looking for before downloading. Additionally, ROMs are downloaded directly to your Android phon's SD card so they'll be ready to play immediately.</p>
 	<h5>Screenshots</h5>
-	<a href="images/romgripper/screenshots/emulator_list.jpg"><img src="images/romgripper/screenshots/emulator_list.jpg" width="138" height="230"/></a>
-	<a href="images/romgripper/screenshots/rom_list.jpg"><img src="images/romgripper/screenshots/rom_list.jpg" width="138" height="230"/></a>
-	<a href="images/romgripper/screenshots/rom_details.jpg"><img src="images/romgripper/screenshots/rom_details.jpg" width="138" height="230"/></a><br/>
+	<a href="../images/romgripper/screenshots/emulator_list.jpg"><img src="../images/romgripper/screenshots/emulator_list.jpg" width="138" height="230"/></a>
+	<a href="../images/romgripper/screenshots/rom_list.jpg"><img src="../images/romgripper/screenshots/rom_list.jpg" width="138" height="230"/></a>
+	<a href="../images/romgripper/screenshots/rom_details.jpg"><img src="../images/romgripper/screenshots/rom_details.jpg" width="138" height="230"/></a><br/>
 	<h5>Steps</h5>
 	<ol>
 		<li>Select a game type</li>
