--- a/zh/index.html
+++ b/zh/index.html
@@ -17,16 +17,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-	<table>
-	<tr>
-		<td valgin="middle">
-			<img src="favicon.png" width="48" height="48"/>
-		</td>
-		<td valgin="middle">
-			<h1 id="project_title" style="margin-left: 20px">ROM Gripper官方网站</h1>
-		</td>
-	</tr>
-	</table>            
+	<h1 id="project_title"><img src="../favicon.png" width="64" height="64" style="margin-right: 20px"/>ROM Gripper官方网站</h1>
 	<table>
 	<tr>
 		<td valgin="middle">
