Add nav for multiple language support

--- a/en/gamelist.html
+++ b/en/gamelist.html
@@ -29,6 +29,9 @@
 		<td valgin="middle">
 			<h5><a href="faq.html" style="margin-left: 20px">FAQ</a></h5>
 		</td>
+		<td valgin="middle">
+			<h5><a href="../zh/gamelist.html" style="margin-left: 100px">[中文]</a></h5>
+		</td>
 	</tr>
 	</table>            
 	<h3 id="project_tagline">Emulator Game List</h3>
