--- a/zh/faq.html
+++ b/zh/faq.html
@@ -29,6 +29,9 @@
 		<td valgin="middle">
 			<h5><a href="faq.html" style="margin-left: 20px">疑问解答</a></h5>
 		</td>
+		<td valgin="middle">
+			<h5><a href="../en/faq.html" style="margin-left: 60px">[English]</a></h5>
+		</td>
 	</tr>
 	</table>            
 	<h3 id="project_tagline">疑问解答</h3>
