--- a/zh/index.html
+++ b/zh/index.html
@@ -29,9 +29,12 @@
 		<td valgin="middle">
 			<h5><a href="faq.html" style="margin-left: 20px">疑问解答</a></h5>
 		</td>
+		<td valgin="middle">
+			<h5><a href="../en/index.html" style="margin-left: 60px">[English]</a></h5>
+		</td>
 	</tr>
 	</table>            
-	<h3 id="project_tagline">ROM Gripper(模拟器游戏ROM大合集)</h3>
+	<h3 id="project_tagline">ROM Gripper (模拟器游戏ROM大合集)</h3>
         </header>
     </div>
 
