--- a/en/index.html
+++ b/en/index.html
@@ -18,6 +18,7 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
 	<h1 id="project_title"><img src="../favicon.png" width="64" height="64" style="margin-right: 20px"/>ROM Gripper's Home</h1>
+			
 	<table>
 	<tr>
 		<td valgin="middle">
@@ -28,6 +29,9 @@
 		</td>
 		<td valgin="middle">
 			<h5><a href="faq.html" style="margin-left: 20px">FAQ</a></h5>
+		</td>
+		<td valgin="middle">
+			<h5><a href="../zh/index.html" style="margin-left: 100px">[中文]</a></h5>
 		</td>
 	</tr>
 	</table>            
