--- a/zh/gamelist.html
+++ b/zh/gamelist.html
@@ -29,9 +29,12 @@
 		<td valgin="middle">
 			<h5><a href="faq.html" style="margin-left: 20px">疑问解答</a></h5>
 		</td>
+		<td valgin="middle">
+			<h5><a href="../en/gamelist.html" style="margin-left: 60px">[English]</a></h5>
+		</td>
 	</tr>
 	</table>            
-	<h3 id="project_tagline">Emulator Game List(模拟器ROM搜索助手)</h3>
+	<h3 id="project_tagline">Emulator Game List (模拟器ROM搜索助手)</h3>
         </header>
     </div>
 
