Rename the ROM Gripper web page file to romgripper.html Redirect index.html to gamelist.html

--- a/en/index.html
+++ b/en/index.html
@@ -1,92 +1,6 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-	<meta charset='utf-8' />
-	<meta http-equiv="X-UA-Compatible" content="chrome=1" />
-	<meta name="description" content="Rom-gripper : ROM Gripper官方网站" />
-
-	<link rel="stylesheet" type="text/css" media="screen" href="../stylesheets/stylesheet.css">
-	<script language="javascript" src="../javascripts/googleAnalytics.js"></script>
-
-	<title>ROM Gripper Offcial Website</title>
+<meta HTTP-EQUIV="REFRESH" content="0; url=gamelist.html">
 </head>
-
-<body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-	<h1 id="project_title"><img src="../favicon.png" width="64" height="64" style="margin-right: 20px"/>ROM Gripper's Home</h1>
-			
-	<table>
-	<tr>
-		<td valgin="middle">
-			<h5><a href="index.html">ROM Gripper</a></h5>
-		</td>
-		<td valgin="middle">
-			<h5><a href="gamelist.html" style="margin-left: 20px">Emulator Game List</a></h5>
-		</td>
-		<td valgin="middle">
-			<h5><a href="faq.html" style="margin-left: 20px">FAQ</a></h5>
-		</td>
-		<td valgin="middle">
-			<h5><a href="../zh/index.html" style="margin-left: 100px">[中文]</a></h5>
-		</td>
-	</tr>
-	</table>            
-	<h3 id="project_tagline">ROM Gripper</h3>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-	<h4>Latest version: 3.4</h4>
-
-	<h4><a href="../RomGripper3.4.apk">Download and install ROM Gripper</a></h4>
-	<h5>Recent changes</h5>
-	<ul>
-		<li>Add Chinese support</li>
-	</ul>
-	<h5>Features</h5>
-	<ul>
-		<li>Bring back your childhood</li>
-		<li>Help search and download thousands of ROMs</li>
-		<li>Simple and Small but powerful</li>
-		<li>One click to download</li>
-		<li>ROM name filtering</li>
-		<li>Resume broken download</li>
-	</ul>
-	<h5>Description</h5>
-	<p>ROM Gripper brings back the "good ol' days" of gaming on systems like NES, Super Nintendo, Atari, Game Boy Advance, Game Boy Color, Sega Genesis, Gamegear, and more.</p>
-	<p>This app acts like a complete game database and is compatible with emulator Android apps like Nesoid, SNesoid and etc. Previously, playing old games on your Android phone was somewhat of a hassle because you would first have to search, download, and then transfer specific ROMs from your computer via the USB cable. Luckily, this app alleviates this issue and makes finding and downloading ROMs extremely easy, while also removing the need for a computer.</p>
-	<p>ROMs are initially organized by gaming system and are further assembled in alphabetical order. You can filter results and search for a specific title, e.g. Super Mario Bros. You can also access a list of the ROMs you've downloaded from the menu.</p>
-	<p>Conveniently, the ROM pages offer screenshots so you can quickly see whether you've found what you were looking for before downloading. Additionally, ROMs are downloaded directly to your Android phon's SD card so they'll be ready to play immediately.</p>
-	<h5>Screenshots</h5>
-	<a href="../images/romgripper/screenshots/emulator_list.jpg"><img src="../images/romgripper/screenshots/emulator_list.jpg" width="138" height="230"/></a>
-	<a href="../images/romgripper/screenshots/rom_list.jpg"><img src="../images/romgripper/screenshots/rom_list.jpg" width="138" height="230"/></a>
-	<a href="../images/romgripper/screenshots/rom_details.jpg"><img src="../images/romgripper/screenshots/rom_details.jpg" width="138" height="230"/></a><br/>
-	<h5>Steps</h5>
-	<ol>
-		<li>Select a game type</li>
-		<li>Select a game</li>
-		<li>Click <b>Download</b> button</li>
-		<li>Open the downloaded ROM from an emulator app</li>
-	</ol>
-	<h5>Notes</h5>
-	<ul>
-		<li>If some ROMs can not be played or crash, that maybe the bugs of the emulator app not the bugs of ROM Gripper. Please contact the developer of your emulator app</li>
-		<li><font color="red">For legal reasons, please ensure that you own the physical game that you are downloading the ROM for.</font></li>
-	</ul>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-	<a href="mailto:romgripper@gmail.com">Contact us</a>
-      </footer>
-    </div>
-</body>
 </html>
