--- a/en/faq.html
+++ b/en/faq.html
@@ -21,7 +21,7 @@
 	<table>
 	<tr>
 		<td valgin="middle">
-			<h5><a href="index.html">ROM Gripper</a></h5>
+			<h5><a href="romgripper.html">ROM Gripper</a></h5>
 		</td>
 		<td valgin="middle">
 			<h5><a href="gamelist.html" style="margin-left: 20px">Emulator Game List</a></h5>
