--- a/zh/romgripper.html
+++ b/zh/romgripper.html
@@ -30,26 +30,42 @@
 			<h5><a href="faq.html" style="margin-left: 20px">疑问解答</a></h5>
 		</td>
 		<td valgin="middle">
-			<h5><a href="../en/faq.html" style="margin-left: 60px">[English]</a></h5>
+			<h5><a href="../en/romgripper.html" style="margin-left: 60px">[English]</a></h5>
 		</td>
 	</tr>
 	</table>            
-	<h3 id="project_tagline">疑问解答</h3>
+	<h3 id="project_tagline">ROM Gripper (模拟器游戏ROM大合集)</h3>
         </header>
     </div>
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-	<h5>什么是模拟器？</h5>
-	<p>是指主要透过软件模拟硬件处理器的功能和指令系统的程序使计算机或者其他多媒体平台（掌上电脑，手机）能够运行其他平台上的软件。</p>
-	<h5>什么是游戏模拟器？</h6>
-	<p>可以使电脑或者其他多媒体平台（掌上电脑，手机）模拟成游戏机程序，能够运行游戏机上的游戏，多为电视游戏和街机模拟器，也有一些掌上电脑的模拟器。</p>
-	<h5>什么是模拟器ROM？</h5>
-	<p>模拟器一般需要rom才能执行，rom的最初来源是一些原平台的rom芯片，通过一些手段将原程序拷贝下来，这个过程一般称之为“dump”，然后利用模拟器加载这些rom来实现模拟过程。</p>
-	<h5>玩模拟器游戏都需要什么？</h5>
-	<p>模拟器ROM和相应的模拟器软件，缺一不可。</p>
+	<h4>最新版本：3.4</h4>
 
+	<h4><a href="../RomGripper3.4.apk">下载安装ROM Gripper</a></h4>
+	<h5>软件简介</h5>
+	<ul>
+		<li>寻找童年时代游戏</li>
+		<li>提供成千上万ROM免费下载</li>
+		<li>简单实用</li>
+	</ul>
+	<h5>更新内容</h5>
+	<ul>
+		<li>加入中文支持</li>
+	</ul>
+	<h5>应用截屏</h5>
+	<a href="../images/romgripper/screenshots/emulator_list.jpg"><img src="../images/romgripper/screenshots/emulator_list.jpg" width="138" height="230"/></a>
+	<a href="../images/romgripper/screenshots/rom_list.jpg"><img src="../images/romgripper/screenshots/rom_list.jpg" width="138" height="230"/></a>
+	<a href="../images/romgripper/screenshots/rom_details.jpg"><img src="../images/romgripper/screenshots/rom_details.jpg" width="138" height="230"/></a><br/>
+	<h5>使用方法</h5>
+	<ol>
+		<li>打开此APP</li>
+		<li>选择模拟器类型</li>
+		<li>选择游戏</li>
+		<li>点击Download按钮下载ROM文件</li>
+		<li>使用相应的模拟器APP打开ROM文件玩游戏</li>
+	</ol>
       </section>
     </div>
 
