Add link to rom gripper on game list pages

--- a/zh/gamelist.html
+++ b/zh/gamelist.html
@@ -134,6 +134,8 @@
 			</div>
 		</li>
 	</ol>
+	<h4>这也太复杂了吧？有没有简单点的？</h4>
+	<p><a href="romgripper.html">ROM Gripper (模拟器游戏ROM大合集)</a>，一键下载，专为懒人定制。</p>
       </section>
     </div>
 
