--- a/en/gamelist.html
+++ b/en/gamelist.html
@@ -138,6 +138,13 @@
 			</div>
 		</li>
 	</ol>
+	<h4>So many steps. Could it be easier?</h4>
+	<p>Why not try <a href="romgripper.html">ROM Gripper</a>, with which one click to download.</p>
+	<h5>Notes</h5>
+	<ul>
+		<li>If some ROMs can not be played or crash, that maybe the bugs of the emulator app not the bugs of ROM Gripper. Please contact the developer of your emulator app</li>
+		<li><font color="red">For legal reasons, please ensure that you own the physical game that you are downloading the ROM for.</font></li>
+	</ul>
       </section>
     </div>
 
