--- a/en/gamelist.html
+++ b/en/gamelist.html
@@ -41,11 +41,13 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-	<h4>Latest version: 1.3</h4>
+	<h4>Latest version: 1.3.1</h4>
 
-	<h4><a href="../GameList1.3.apk">Download and install Emulator Game List</a></h4>
+	<h4><a href="../GameList1.3.1.apk">Download and install Emulator Game List</a></h4>
 	<h5>Recent changes</h5>
 	<ul>
+		<li>Link to the new home page</li>
+		<li>Fix a crash bug</li>
 		<li>Fix crashing when search ROM file</li>
 		<li>Shortcut for searching emulator app in market</li>
 		<li>Using baidu.com to search when the system language is Chinese</li>
@@ -138,7 +140,7 @@
 			</div>
 		</li>
 	</ol>
-	<h4>So many steps. Could it be easier?</h4>
+	<h4>So many steps! Could it be easier?</h4>
 	<p>Why not try <a href="romgripper.html">ROM Gripper</a>, with which one click to download.</p>
 	<h5>Notes</h5>
 	<ul>
