--- a/zh/gamelist.html
+++ b/zh/gamelist.html
@@ -41,11 +41,12 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-	<h4>最新版本：1.3</h4>
+	<h4>最新版本：1.3.1</h4>
 
-	<h4><a href="../GameList1.3.apk">下载安装Emulator Game List</a></h4>
+	<h4><a href="../GameList1.3.1.apk">下载安装Emulator Game List</a></h4>
 	<h5>软件简介</h5>
 	<ul>
+		<li>解决一个软件崩溃的问题</li>
 		<li>最全的模拟器游戏列表</li>
 		<li>虽无法直接下载游戏，但通过百度搜索引擎搜索游戏，用户自主选择下载</li>
 	</ul>
