--- a/en/index.html
+++ b/en/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta HTTP-EQUIV="REFRESH" content="0; url=gamelist.html">
+<meta HTTP-EQUIV="REFRESH" content="0; url=romgripper.html">
 </head>
 </html>
