--- a/en/emulators.html
+++ b/en/emulators.html
@@ -44,11 +44,19 @@
       <section id="main_content" class="inner">
 	<h5>Nintendo</h5>
 	<ul>
-		<li><a href="https://play.google.com/store/apps/details?id=com.johnemulators.johnneslite">John NES Lite (NES Emulator)</a></li>
+		<li><a href="https://play.google.com/store/apps/details?id=com.johnemulators.johnneslite" target="_blank">John NES Lite (NES Emulator)</a></li>
 	</ul>
-  <h5>Super Nintendo</h5>
-  <ul>
-		<li><a href="https://play.google.com/store/apps/details?id=com.bubblezapgames.supergnes_lite">SuperGNES Lite</a></li>
+  	<h5>Super Nintendo</h5>
+  	<ul>
+		<li><a href="https://play.google.com/store/apps/details?id=com.bubblezapgames.supergnes_lite" target="_blank">SuperGNES Lite</a></li>
+	</ul>
+	<h5>Nintendo 64</h5>
+  	<ul>
+		<li><a href="https://play.google.com/store/apps/details?id=paulscode.android.mupen64plus.free" target="_blank">Mupen64+AE FREE (N64 Emulator)</a></li>
+	</ul>
+	<h5>Nintendo DS</h5>
+  	<ul>
+		<li><a href="https://play.google.com/store/apps/details?id=com.opendoorstudios.ds4droid" target="_blank">nds4droid</a></li>
 	</ul>
       </section>
     </div>
