--- a/en/emulators.html
+++ b/en/emulators.html
@@ -44,7 +44,11 @@
       <section id="main_content" class="inner">
 	<h5>Nintendo</h5>
 	<ul>
-		<li>John NES Lite (NES Emulator)<a href="https://play.google.com/store/apps/details?id=com.johnemulators.johnneslite" target="_blank">Web</a><a href="market://play.google.com/store/apps/details?id=com.johnemulators.johnneslite">Web</a></li>
+		<li>
+			John NES Lite (NES Emulator)
+			<a href="https://play.google.com/store/apps/details?id=com.johnemulators.johnneslite" target="_blank">Web</a>
+			<a href="market://details?id=com.johnemulators.johnneslite">Market</a>
+		</li>
 	</ul>
   	<h5>Super Nintendo</h5>
   	<ul>
